[package]
name = "penrose-fuzz"
version = "0.0.0"
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
penrose = { path = ".." }
honggfuzz = "0.5.55"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "notify"
path = "fuzz_targets/notify.rs"